--- a/index.html
+++ b/index.html
@@ -1,4 +1,48 @@
-<button type="button">Grabar pantalla</button>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>Loteria de Cordoba S.E.</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</head>
+
+<body>
+
+    <div class="container text-center">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col">
+                <div class="card mt-5" style="width: 30rem;">
+                    <img src="logo-loteria-footer-color.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Grabadora de Pantalla</h5>
+                        <ol class="list-group list-group-numbered">
+                            <li class="list-group-item fst-italic text-start fs-6">Presione el botón Comenzar ahora.</li>
+                            <li class="list-group-item fst-italic text-start fs-6">Se le abrira una ventana de consulta.</li>
+                            <li class="list-group-item fst-italic text-start fs-6">Selecione la opción mas indicada.</li>
+                            <li class="list-group-item fst-italic text-start fs-6">Comienze su video.</li>
+                            <li class="list-group-item fst-italic text-start fs-6">Al finalizar se la descargará el video en la carpeta descargas.</li>
+                            <li class="list-group-item fst-italic text-start fs-6">Comparta su experiencia!!!</li>
+                            <li class="list-group-item fst-italic text-start fs-6">Mucha suerte...</li>
+                        <button type="button" class="btn btn-primary">Comenzar ahora</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col"></div>
+        </div>
+    </div>
+
+
+</body>
+
+</html>
+
 <script>
     const $button = document.querySelector('button')
 
