--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Grabadora de Pantalla</h5>
                         <ol class="list-group list-group-numbered">
+                            <li class="list-group-item fst-italic text-start fs-6">Utilize Navegador Chrome o Edge.</li>
                             <li class="list-group-item fst-italic text-start fs-6">Presione el botón Comenzar ahora.</li>
                             <li class="list-group-item fst-italic text-start fs-6">Se le abrira una ventana de consulta.</li>
                             <li class="list-group-item fst-italic text-start fs-6">Selecione la opción mas indicada.</li>
