--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <li class="list-group-item fst-italic text-start fs-6">Presione el botón Comenzar ahora.</li>
                             <li class="list-group-item fst-italic text-start fs-6">Se le abrira una ventana de consulta.</li>
                             <li class="list-group-item fst-italic text-start fs-6">Selecione la opción mas indicada.</li>
-                            <li class="list-group-item fst-italic text-start fs-6">Comienze su video.</li>
+                            <li class="list-group-item fst-italic text-start fs-6">Comiense su video.</li>
                             <li class="list-group-item fst-italic text-start fs-6">Al finalizar se la descargará el video en la carpeta descargas.</li>
                             <li class="list-group-item fst-italic text-start fs-6">Comparta su experiencia!!!</li>
                             <li class="list-group-item fst-italic text-start fs-6">Mucha suerte...</li>
